[project]
name = "sentry"
# see setup.cfg for versioning; we only have this here to make uv happy
# which we intend to use for dependency management, not packaging
version = "0.0.0"
dependencies = [
    "beautifulsoup4>=4.7.1",
    "boto3>=1.34.128",
    "botocore>=1.34.128",
    "brotli>=1.1.0",
    "cachetools>=5.3.0",
    "click>=8.2.1",
    "confluent-kafka>=2.8.0",
    "cronsim>=2.6",
    "cryptography>=44.0.1",
    "cssselect>=1.0.3",
    "datadog>=0.49.1",
    "django>=5.2.1",
    "django-crispy-forms>=1.14.0",
    "django-csp>=3.8",
    "django-pg-zero-downtime-migrations>=0.18",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.27.2",
    "fido2>=0.9.2",
    "google-api-core>=2.19.1",
    "google-auth>=2.29.0",
    "google-cloud-bigtable>=2.30.1",
    "google-cloud-build>=3.24.2",
    "google-cloud-core>=2.4.1",
    "google-cloud-functions>=1.17.0",
    "google-cloud-kms>=2.24.2",
    "google-cloud-pubsub>=2.23.0",
    "google-cloud-spanner>=3.49.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-storage-transfer>=1.17.0",
    "google-crc32c>=1.6.0",
    "googleapis-common-protos>=1.63.2",
    "granian>=2.5",
    "grpc-google-iam-v1>=0.13.1",
    # Note, grpcio>1.30.0 requires setting GRPC_POLL_STRATEGY=epoll1
    # See https://github.com/grpc/grpc/issues/23796 and
    # https://github.com/grpc/grpc/blob/v1.35.x/doc/core/grpc-polling-engines.md#polling-engine-implementations-in-grpc
    "grpcio>=1.67.0",
    # not directly used, but provides a speedup for redis
    "hiredis>=2.3.2",
    "jsonschema>=4.20.0",
    "lxml>=5.3.0",
    "maxminddb>=2.3.0",
    "mistune>=2.0.4",
    "mmh3>=4.0.0",
    "msgspec>=0.19.0",
    "msgpack>=1.1.0",
    "objectstore-client>=0.0.5",
    "openai>=1.3.5",
    "orjson>=3.10.10",
    "packaging>=24.1",
    "parsimonious>=0.10.0",
    "petname>=2.6",
    "phonenumberslite>=8.12.55",
    "pillow>=11.0.0",
    "proto-plus>=1.25.0",
    "protobuf>=5.27.3",
    "psutil>=5.9.7",
    "psycopg2-binary>=2.9.10",
    "pydantic>=1.10.23,<2",
    "pymemcache>=4.0.0",
    "pyjwt>=2.4.0",
    "python-dateutil>=2.9.0.post0",
    "python-rapidjson>=1.8",
    "python-u2flib-server>=5.0.0",
    "python3-saml>=1.15.0",
    "pyuwsgi>=2.0.28.post1",
    "rb>=1.10.0",
    "redis>=3.4.1",
    "redis-py-cluster>=2.1.0",
    "requests>=2.32.4",
    "requests-oauthlib>=1.2.0",
    # [start] jsonschema format validators
    "rfc3339-validator>=0.1.2",
    "rfc3986-validator>=0.1.1",
    # [end] jsonschema format validators
    "sentry-arroyo>=2.32.5",
    "sentry-forked-email-reply-parser>=0.5.12.post1",
    "sentry-kafka-schemas>=2.1.13",
    "sentry-ophio>=1.1.3",
    "sentry-protos>=0.4.2",
    "sentry-redis-tools>=0.5.0",
    "sentry-relay>=0.9.19",
    "sentry-sdk[http2]>=2.43.0",
    "sentry-usage-accountant>=0.0.10",
    # remove once there are no unmarked transitive dependencies on setuptools
    "setuptools>=70.0.0",
    "simplejson>=3.17.6",
    "slack-sdk>=3.27.2",
    "snuba-sdk>=3.0.43",
    "sqlparse>=0.5.0",
    "statsd>=3.3.0",
    "structlog>=22.1.0",
    "symbolic>=12.14.1",
    "tiktoken>=0.8.0",
    "tokenizers>=0.22.0",
    "tldextract>=5.1.2",
    "toronado>=0.1.0",
    "typing-extensions>=4.12.0",
    "ua-parser>=0.10.0",
    "unidiff>=0.7.4",
    # note: we cannot resolve urllib3[brotli] but brotli is installed
    #       and will be used
    "urllib3>=2.2.2",
    "vroomrs>=0.1.19",
    "xmlsec>=1.3.14",
    "zstandard>=0.18.0",
    # [begin] getsentry
    # there's very few here so just include them here otherwise if they're
    # in an extra, regular `uv sync` will uninstall them, and people will
    # be confused
    "avalara>=20.9.0",
    "iso3166>=2.1.1",
    "pycountry>=17.5.14",
    "pyvat>=1.3.15",
    "reportlab>=4.4.0",
    "stripe>=6.7.0",
    # [end] getsentry
]

[tool.uv]
environments = ["sys_platform == 'darwin' or sys_platform == 'linux'"]

[[tool.uv.index]]
# We don't allow using public pypi - submit a PR to
# https://github.com/getsentry/pypi to add a dependency.
url = "https://pypi.devinfra.sentry.io/simple"
default = true

# Note: instead of using a build system, we use tools/fast_editable.py
# to install sentry editably as well as console scripts.
# Otherwise, you need to define a build system (uv_build)
# and console scripts here, and call uv sync then uv pip install -e .

[dependency-groups]
dev = [
    "black>=25.1.0",
    "covdefaults>=2.3.0",
    "devservices>=1.2.2",
    "docker>=7.1.0",
    "ephemeral-port-reserve>=1.1.4",
    "flake8>=7.3.0",
    "flake8-bugbear>=22.10.27",
    "flake8-logging>=1.5.0",
    "honcho>=2.0.0",
    "isort>=6",
    "lxml-stubs>=0.4.0",
    "msgpack-types>=0.2.0",
    "mypy>=1.17.1",
    "mypy-extensions>=1.0.0",
    "openapi-core>=0.18.2",
    "openapi-pydantic>=0.4.0",
    "pip>=23.3.1",
    "pip-tools>=7.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.1.2",
    "pytest-cov>=4.0.0",
    "pytest-django>=4.9.0",
    "pytest-fail-slow>=0.3.0",
    "pytest-json-report>=1.5.0",
    "pytest-rerunfailures>=15.0",
    "pytest-sentry>=0.3.0",
    "pytest-workaround-12888>=1.0.0",
    "pytest-xdist>=3.0.2",
    "pyupgrade>=3.19.1",
    "responses>=0.23.1",
    "selenium>=4.16.0",
    "sentry-cli>=2.16.0",
    "sentry-covdefaults-disable-branch-coverage>=1.0.2",
    "sentry-devenv>=1.22.0",
    "sentry-forked-django-stubs>=5.2.2.post2",
    "sentry-forked-djangorestframework-stubs>=3.16.3.post1",
    "time-machine>=2.16.0",
    "types-beautifulsoup4>=4.11.6",
    "types-cachetools>=5.3.0.5",
    "types-docker>=7.1.0.20250705",
    "types-jsonschema>=4.16.1",
    "types-oauthlib>=3.2.0.8",
    "types-parsimonious>=0.10.0.8",
    "types-pillow>=9.5.0.4",
    "types-protobuf>=4.23.0.1",
    "types-psutil>=5.9.5.16",
    "types-psycopg2>=2.9.21",
    "types-python-dateutil>=2.8.19",
    "types-pyyaml>=6.0.11",
    "types-redis>=3.5.18",
    "types-requests>=2.32.0.20241016",
    "types-requests-oauthlib>=2.0.0.20250119",
    "types-setuptools>=69.0.0.0",
    "types-simplejson>=3.17.7.2",
    "types-unidiff>=0.7.0.20240505",
]

[tool.black]
# File filtering is taken care of in pre-commit.
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 1
known_first_party = "sentry"
skip = "migrations"
# feature appears bugged in isort 6.x pycqa/isort#2352
split_on_trailing_comma = false

[tool.pytest.ini_options]
python_files = "test_*.py sentry/testutils/*"
# note: When updating the traceback format, make sure to update .github/pytest.json
addopts = "--tb=short --nomigrations"
# TODO: --import-mode=importlib will become the default soon,
# currently we have a few relative imports that don't work with that.
markers = [
    "snuba: test requires access to snuba",
    "snuba_ci: test is run in snuba ci",
    "sentry_metrics: test requires access to sentry metrics",
    "symbolicator: test requires access to symbolicator",
    "querybuilder: smoke tests for QueryBuilders",
    "thread_leak_allowlist: temporarily allow known-issue thread leaks",
]
filterwarnings = [
    # Consider all warnings to be errors other than the ignored ones.
    "error",

    # TODO: we should fix these, but for now there's a lot
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated.*",
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated.*",

    # The following warning filters are for pytest only.
    "ignore:.*sentry.digests.backends.dummy.DummyBackend.*:sentry.utils.warnings.UnsupportedBackend",

    # pytest has not yet implemented the replacement for this yet
    "ignore:The --looponfail command line argument.*",
]
looponfailroots = ["src", "tests"]

[tool.mypy]
python_version = "3.13"
mypy_path = ["fixtures/stubs-for-mypy"]
plugins = [
    "pydantic.mypy",
    "mypy_django_plugin.main",
    "tools.mypy_helpers.plugin",
]
files = ["."]
exclude = ["^.venv/", "^venv/", "^self-hosted/"]

# minimal strictness settings
check_untyped_defs = true
no_implicit_reexport = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
enable_error_code = ["ignore-without-code", "redundant-self"]
local_partial_types = true                                    # compat with dmypy

[tool.django-stubs]
django_settings_module = "sentry.conf.server_mypy"

# these have py.typed but incorrect types
[[tool.mypy.overrides]]
module = [
    # TODO: these cause type errors when followed
    "snuba_sdk.*",
]
follow_imports = "skip"

# python3 -m tools.mypy_helpers.make_stub_ignores
# begin: missing 3rd party stubs
# - add .pyi files to fixtures/stubs-for-mypy
# - or find a 3rd party stub
[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.client.*",
    "botocore.exceptions.*",
    "confluent_kafka.*",
    "cssselect.*",
    "django_zero_downtime_migrations.backends.postgres.schema.*",
    "fido2.*",
    "google.auth.*",
    "google.cloud.*",
    "google.resumable_media.common.*",
    "google.rpc.status_pb2.*",
    "google.type.*",
    "kombu.*",
    "mistune.*",
    "onelogin.saml2.auth.*",
    "onelogin.saml2.constants.*",
    "onelogin.saml2.idp_metadata_parser.*",
    "rb.*",
    "statsd.*",
    "tokenizers.*",
    "u2flib_server.model.*",
]
ignore_missing_imports = true
# end: missing 3rd party stubs

# python3 -m tools.mypy_helpers.make_module_ignores
# begin: sentry modules with typing issues
# - remove the module from the list and fix the issues!
# - python3 -m tools.mypy_helpers.find_easiest_modules
[[tool.mypy.overrides]]
module = [
    "sentry.api.endpoints.organization_events_meta",
    "sentry.api.endpoints.organization_releases",
    "sentry.api.paginator",
    "sentry.db.postgres.base",
    "sentry.middleware.auth",
    "sentry.middleware.ratelimit",
    "sentry.net.http",
    "sentry.release_health.metrics_sessions_v2",
    "sentry.search.events.builder.errors",
    "sentry.search.events.builder.metrics",
    "sentry.search.events.datasets.filter_aliases",
    "sentry.search.events.datasets.metrics_layer",
    "sentry.search.events.filter",
    "sentry.search.snuba.executors",
    "sentry.services.eventstore.models",
    "sentry.snuba.metrics.query_builder",
    "sentry.testutils.cases",
    "tests.sentry.api.helpers.test_group_index",
    "tests.sentry.issues.test_utils",
]
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-overload",
    "misc",
    "override",
    "union-attr",
]
# end: sentry modules with typing issues

# begin: stronger typing
[[tool.mypy.overrides]]
module = [
    "fixtures.safe_migrations_apps.*",
    "fixtures.schema_validation",
    "sentry.analytics.*",
    "sentry.api.bases.*",
    "sentry.api.decorators",
    "sentry.api.endpoints.integrations.*",
    "sentry.api.endpoints.organization_events_spans_performance",
    "sentry.api.endpoints.project_repo_path_parsing",
    "sentry.api.endpoints.project_rules_configuration",
    "sentry.api.endpoints.release_thresholds.*",
    "sentry.api.endpoints.secret_scanning.*",
    "sentry.api.event_search",
    "sentry.api.helpers.*",
    "sentry.api.permissions",
    "sentry.api.serializers.models.organization_member.*",
    "sentry.api.serializers.rest_framework.group_notes",
    "sentry.apidocs.examples.*",
    "sentry.audit_log.services.*",
    "sentry.auth.access",
    "sentry.auth.authenticators.*",
    "sentry.auth.manager",
    "sentry.auth.providers.*",
    "sentry.auth.services.*",
    "sentry.auth.view",
    "sentry.auth_v2.migrations.*",
    "sentry.auth_v2.services.*",
    "sentry.auth_v2.utils.*",
    "sentry.bgtasks.*",
    "sentry.buffer.*",
    "sentry.build.*",
    "sentry.charts.*",
    "sentry.dashboards.*",
    "sentry.data_export.*",
    "sentry.data_secrecy.*",
    "sentry.db.deletion",
    "sentry.db.models.fields.citext",
    "sentry.db.models.fields.foreignkey",
    "sentry.db.models.fields.hybrid_cloud_foreign_key",
    "sentry.db.models.fields.types",
    "sentry.db.models.manager.*",
    "sentry.db.models.paranoia",
    "sentry.db.models.utils",
    "sentry.db.pending_deletion",
    "sentry.deletions.*",
    "sentry.demo_mode.*",
    "sentry.digests.*",
    "sentry.discover.migrations.*",
    "sentry.dynamic_sampling.*",
    "sentry.eventstore.*",
    "sentry.eventstream.*",
    "sentry.eventtypes.error",
    "sentry.explore.migrations.*",
    "sentry.feedback.migrations.*",
    "sentry.feedback.tasks.*",
    "sentry.filestore.*",
    "sentry.flags.migrations.*",
    "sentry.grouping.api",
    "sentry.grouping.component",
    "sentry.grouping.enhancer.parser",
    "sentry.grouping.fingerprinting.*",
    "sentry.grouping.grouping_info",
    "sentry.grouping.ingest.*",
    "sentry.grouping.parameterization",
    "sentry.grouping.utils",
    "sentry.grouping.variants",
    "sentry.hybridcloud.*",
    "sentry.identity.bitbucket.*",
    "sentry.identity.discord.*",
    "sentry.identity.github_enterprise.*",
    "sentry.identity.services.*",
    "sentry.identity.vercel.*",
    "sentry.identity.vsts_extension.*",
    "sentry.incidents.endpoints.bases",
    "sentry.incidents.handlers.*",
    "sentry.incidents.utils.*",
    "sentry.ingest.slicing",
    "sentry.insights.migrations.*",
    "sentry.integrations.api.parsers.*",
    "sentry.integrations.coding_agent.*",
    "sentry.integrations.discord.actions.*",
    "sentry.integrations.discord.handlers.*",
    "sentry.integrations.discord.message_builder.*",
    "sentry.integrations.discord.utils.*",
    "sentry.integrations.discord.views.*",
    "sentry.integrations.discord.webhooks.*",
    "sentry.integrations.github.actions.*",
    "sentry.integrations.github.handlers.*",
    "sentry.integrations.github_enterprise.actions.*",
    "sentry.integrations.github_enterprise.handlers.*",
    "sentry.integrations.jira.actions.*",
    "sentry.integrations.jira.endpoints.*",
    "sentry.integrations.jira.handlers.*",
    "sentry.integrations.jira.models.*",
    "sentry.integrations.jira_server.actions.*",
    "sentry.integrations.jira_server.handlers.*",
    "sentry.integrations.jira_server.utils.*",
    "sentry.integrations.models.integration_feature",
    "sentry.integrations.msteams.handlers.*",
    "sentry.integrations.opsgenie.handlers.*",
    "sentry.integrations.pagerduty.*",
    "sentry.integrations.project_management.*",
    "sentry.integrations.repository.*",
    "sentry.integrations.services.*",
    "sentry.integrations.slack.handlers.*",
    "sentry.integrations.slack.requests.*",
    "sentry.integrations.slack.threads.*",
    "sentry.integrations.slack.unfurl.*",
    "sentry.integrations.slack.views.*",
    "sentry.integrations.source_code_management.*",
    "sentry.integrations.utils.sync",
    "sentry.integrations.vsts.actions.*",
    "sentry.integrations.vsts.handlers.*",
    "sentry.integrations.vsts.tasks.*",
    "sentry.integrations.vsts_extension.*",
    "sentry.issue_detection.*",
    "sentry.issues",
    "sentry.issues.analytics",
    "sentry.issues.apps",
    "sentry.issues.auto_source_code_config.*",
    "sentry.issues.constants",
    "sentry.issues.endpoints",
    "sentry.issues.endpoints.actionable_items",
    "sentry.issues.endpoints.bases.*",
    "sentry.issues.endpoints.browser_reporting_collector",
    "sentry.issues.endpoints.group_activities",
    "sentry.issues.endpoints.group_details",
    "sentry.issues.endpoints.group_event_details",
    "sentry.issues.endpoints.group_events",
    "sentry.issues.endpoints.group_hashes",
    "sentry.issues.endpoints.group_notes",
    "sentry.issues.endpoints.group_notes_details",
    "sentry.issues.endpoints.group_similar_issues",
    "sentry.issues.endpoints.group_similar_issues_embeddings",
    "sentry.issues.endpoints.group_tombstone",
    "sentry.issues.endpoints.group_tombstone_details",
    "sentry.issues.endpoints.organization_derive_code_mappings",
    "sentry.issues.endpoints.organization_eventid",
    "sentry.issues.endpoints.organization_group_index",
    "sentry.issues.endpoints.organization_group_index_stats",
    "sentry.issues.endpoints.organization_group_search_view_details",
    "sentry.issues.endpoints.organization_group_search_view_visit",
    "sentry.issues.endpoints.organization_group_search_views",
    "sentry.issues.endpoints.organization_release_previous_commits",
    "sentry.issues.endpoints.organization_searches",
    "sentry.issues.endpoints.organization_shortid",
    "sentry.issues.endpoints.project_event_details",
    "sentry.issues.endpoints.project_events",
    "sentry.issues.endpoints.project_group_index",
    "sentry.issues.endpoints.project_group_stats",
    "sentry.issues.endpoints.project_stacktrace_link",
    "sentry.issues.endpoints.related_issues",
    "sentry.issues.endpoints.shared_group_details",
    "sentry.issues.endpoints.source_map_debug",
    "sentry.issues.endpoints.team_all_unresolved_issues",
    "sentry.issues.endpoints.team_groups_old",
    "sentry.issues.endpoints.team_issue_breakdown",
    "sentry.issues.escalating.escalating",
    "sentry.issues.escalating.escalating_group_forecast",
    "sentry.issues.escalating.escalating_issues_alg",
    "sentry.issues.escalating.forecasts",
    "sentry.issues.ignored",
    "sentry.issues.ingest",
    "sentry.issues.issue_occurrence",
    "sentry.issues.json_schemas",
    "sentry.issues.merge",
    "sentry.issues.occurrence_consumer",
    "sentry.issues.ongoing",
    "sentry.issues.ownership.*",
    "sentry.issues.priority",
    "sentry.issues.producer",
    "sentry.issues.query",
    "sentry.issues.receivers",
    "sentry.issues.related.*",
    "sentry.issues.run",
    "sentry.issues.services.*",
    "sentry.issues.status_change",
    "sentry.issues.status_change_consumer",
    "sentry.issues.status_change_message",
    "sentry.issues.update_inbox",
    "sentry.lang.java.processing",
    "sentry.mail.*",
    "sentry.metrics.*",
    "sentry.middleware.integrations.*",
    "sentry.middleware.reporting_endpoint",
    "sentry.migrations.*",
    "sentry.models.activity",
    "sentry.models.event",
    "sentry.models.eventattachment",
    "sentry.models.groupassignee",
    "sentry.models.grouphistory",
    "sentry.models.groupinbox",
    "sentry.models.groupredirect",
    "sentry.models.groupsubscription",
    "sentry.models.options.*",
    "sentry.monitors.clock_tasks.*",
    "sentry.monitors.consumers.*",
    "sentry.monkey.*",
    "sentry.net.socket",
    "sentry.nodestore.*",
    "sentry.notifications.api.parsers.*",
    "sentry.notifications.migrations.*",
    "sentry.notifications.notification_action.action_handler_registry.*",
    "sentry.notifications.notification_action.group_type_notification_registry.*",
    "sentry.notifications.notification_action.issue_alert_registry.*",
    "sentry.notifications.notification_action.metric_alert_registry.*",
    "sentry.notifications.notifications.*",
    "sentry.notifications.platform.*",
    "sentry.notifications.services.*",
    "sentry.notifications.utils.*",
    "sentry.options.rollout",
    "sentry.organizations.*",
    "sentry.overwatch.*",
    "sentry.ownership.*",
    "sentry.pipeline.*",
    "sentry.plugins.base.response",
    "sentry.plugins.base.view",
    "sentry.plugins.validators.*",
    "sentry.post_process_forwarder.*",
    "sentry.preprod.*",
    "sentry.prevent.*",
    "sentry.profiles.*",
    "sentry.projects.*",
    "sentry.ratelimits.*",
    "sentry.relay.config.metric_extraction",
    "sentry.relay.types.*",
    "sentry.release_health.release_monitor.*",
    "sentry.releases.migrations.*",
    "sentry.releases.serializers.*",
    "sentry.releases.use_cases.*",
    "sentry.relocation.api.endpoints.artifacts.*",
    "sentry.relocation.api.serializers.*",
    "sentry.relocation.services.*",
    "sentry.replays.consumers.*",
    "sentry.replays.lib.new_query.*",
    "sentry.replays.lib.selector.*",
    "sentry.replays.migrations.*",
    "sentry.replays.scripts.*",
    "sentry.reprocessing2",
    "sentry.roles.*",
    "sentry.rules.actions.integrations.*",
    "sentry.rules.actions.sentry_apps.*",
    "sentry.rules.conditions.*",
    "sentry.rules.history.endpoints.*",
    "sentry.runner.*",
    "sentry.scim.*",
    "sentry.search.eap.*",
    "sentry.search.snuba.backend",
    "sentry.security.*",
    "sentry.seer.fetch_issues.*",
    "sentry.seer.services.*",
    "sentry.seer.similarity.*",
    "sentry.seer.workflows.*",
    "sentry.sentry_apps.api.utils.*",
    "sentry.sentry_apps.external_issues.*",
    "sentry.sentry_apps.services.*",
    "sentry.sentry_apps.token_exchange.*",
    "sentry.sentry_apps.utils.*",
    "sentry.sentry_apps.web.*",
    "sentry.sentry_metrics.consumers.indexer.*",
    "sentry.sentry_metrics.indexer.*",
    "sentry.services.eventstore.base",
    "sentry.services.eventstore.processing.*",
    "sentry.services.eventstore.reprocessing.*",
    "sentry.services.eventstore.snuba.*",
    "sentry.services.nodestore.*",
    "sentry.shared_integrations.client.*",
    "sentry.shared_integrations.exceptions.*",
    "sentry.silo.*",
    "sentry.snuba.metrics.extraction",
    "sentry.snuba.metrics.naming_layer.*",
    "sentry.snuba.query_subscriptions.*",
    "sentry.spans.consumers.process_segments.*",
    "sentry.spans.grouping.*",
    "sentry.stacktraces.platform",
    "sentry.status_checks.*",
    "sentry.tasks.beacon",
    "sentry.tasks.codeowners.*",
    "sentry.tasks.commit_context",
    "sentry.tasks.delete_seer_grouping_records",
    "sentry.tasks.on_demand_metrics",
    "sentry.tasks.reprocessing2",
    "sentry.tasks.store",
    "sentry.tasks.unmerge",
    "sentry.taskworker.*",
    "sentry.tempest.endpoints.*",
    "sentry.tempest.migrations.*",
    "sentry.testutils.helpers.task_runner",
    "sentry.testutils.helpers.usage_accountant",
    "sentry.testutils.notifications.*",
    "sentry.testutils.pytest.json_report_reruns",
    "sentry.testutils.pytest.show_flaky_failures",
    "sentry.testutils.skips",
    "sentry.testutils.thread_leaks.*",
    "sentry.toolbar.utils.*",
    "sentry.types.*",
    "sentry.uptime.migrations.*",
    "sentry.uptime.rdap.*",
    "sentry.usage_accountant.*",
    "sentry.users.*",
    "sentry.utils.arroyo",
    "sentry.utils.assets",
    "sentry.utils.audit",
    "sentry.utils.codeowners",
    "sentry.utils.colors",
    "sentry.utils.committers",
    "sentry.utils.email.*",
    "sentry.utils.env",
    "sentry.utils.event",
    "sentry.utils.event_frames",
    "sentry.utils.event_tracker",
    "sentry.utils.eventuser",
    "sentry.utils.forms",
    "sentry.utils.function_cache",
    "sentry.utils.geo",
    "sentry.utils.github",
    "sentry.utils.imports",
    "sentry.utils.iterators",
    "sentry.utils.javascript",
    "sentry.utils.kafka",
    "sentry.utils.kafka_config",
    "sentry.utils.kvstore.*",
    "sentry.utils.lazy_service_wrapper",
    "sentry.utils.linksign",
    "sentry.utils.locking.*",
    "sentry.utils.math",
    "sentry.utils.memory",
    "sentry.utils.metrics",
    "sentry.utils.numbers",
    "sentry.utils.otp",
    "sentry.utils.projectflags",
    "sentry.utils.prompts",
    "sentry.utils.pubsub",
    "sentry.utils.query",
    "sentry.utils.redis",
    "sentry.utils.redis_metrics",
    "sentry.utils.registry",
    "sentry.utils.sdk_crashes.*",
    "sentry.utils.security.*",
    "sentry.utils.sentry_apps.*",
    "sentry.utils.services",
    "sentry.utils.signing",
    "sentry.utils.slug",
    "sentry.utils.sms",
    "sentry.utils.snowflake",
    "sentry.utils.snuba_rpc",
    "sentry.utils.urls",
    "sentry.utils.uwsgi",
    "sentry.utils.versioning",
    "sentry.utils.warnings",
    "sentry.utils.zip",
    "sentry.web.frontend.auth_provider_login",
    "sentry.web.frontend.cli",
    "sentry.web.frontend.csv",
    "sentry.web.frontend.debug.charts.*",
    "sentry.web.frontend.mixins.*",
    "sentry.workflow_engine.buffer.*",
    "sentry.workflow_engine.endpoints.utils.*",
    "sentry.workflow_engine.handlers.condition.*",
    "sentry.workflow_engine.handlers.workflow.*",
    "sentry.workflow_engine.migrations.*",
    "sentry.workflow_engine.processors.*",
    "sentry.workflow_engine.service.*",
    "sentry.workflow_engine.tasks.*",
    "sentry.workflow_engine.typings.*",
    "sentry.workflow_engine.utils.*",
    "sentry_plugins.base",
    "social_auth.admin",
    "social_auth.migrations.*",
    "sudo.*",
    "tests.acceptance.*",
    "tests.apidocs.*",
    "tests.sentry.api.endpoints.issues.*",
    "tests.sentry.api.endpoints.release_thresholds.*",
    "tests.sentry.api.endpoints.secret_scanning.*",
    "tests.sentry.api.endpoints.test_browser_reporting_collector",
    "tests.sentry.api.endpoints.test_project_repo_path_parsing",
    "tests.sentry.api.fields.*",
    "tests.sentry.api.helpers.test_error_upsampling",
    "tests.sentry.api.validators.*",
    "tests.sentry.audit_log.*",
    "tests.sentry.auth.authenticators.*",
    "tests.sentry.auth.providers.google.*",
    "tests.sentry.auth.services.*",
    "tests.sentry.auth_v2.endpoints.*",
    "tests.sentry.charts.*",
    "tests.sentry.data_export.*",
    "tests.sentry.data_secrecy.*",
    "tests.sentry.db.test_deletion",
    "tests.sentry.debug.utils.*",
    "tests.sentry.deletions.*",
    "tests.sentry.demo_mode.*",
    "tests.sentry.digests.*",
    "tests.sentry.discover.translation.*",
    "tests.sentry.event_manager.test_event_manager",
    "tests.sentry.eventstream.kafka.*",
    "tests.sentry.eventtypes.*",
    "tests.sentry.flags.*",
    "tests.sentry.grouping.*",
    "tests.sentry.hybridcloud.*",
    "tests.sentry.incidents.handlers.*",
    "tests.sentry.incidents.serializers.*",
    "tests.sentry.insights.*",
    "tests.sentry.integrations.api.serializers.*",
    "tests.sentry.integrations.discord.*",
    "tests.sentry.integrations.jira.models.*",
    "tests.sentry.integrations.jira.utils.*",
    "tests.sentry.integrations.middleware.*",
    "tests.sentry.integrations.models.*",
    "tests.sentry.integrations.msteams.*",
    "tests.sentry.integrations.repository.*",
    "tests.sentry.integrations.services.*",
    "tests.sentry.integrations.slack.actions.*",
    "tests.sentry.integrations.slack.message_builder.*",
    "tests.sentry.integrations.slack.threads.*",
    "tests.sentry.integrations.slack.webhooks.commands.*",
    "tests.sentry.integrations.source_code_management.*",
    "tests.sentry.integrations.vsts_extension.*",
    "tests.sentry.issue_detection.*",
    "tests.sentry.issues",
    "tests.sentry.issues.auto_source_code_config.*",
    "tests.sentry.issues.endpoints.*",
    "tests.sentry.issues.escalating.*",
    "tests.sentry.issues.ownership.*",
    "tests.sentry.issues.test_attributes",
    "tests.sentry.issues.test_group_attributes_dataset",
    "tests.sentry.issues.test_grouptype",
    "tests.sentry.issues.test_ignored",
    "tests.sentry.issues.test_ingest",
    "tests.sentry.issues.test_issue_occurrence",
    "tests.sentry.issues.test_json_schemas",
    "tests.sentry.issues.test_merge",
    "tests.sentry.issues.test_occurrence_consumer",
    "tests.sentry.issues.test_ongoing",
    "tests.sentry.issues.test_priority",
    "tests.sentry.issues.test_producer",
    "tests.sentry.issues.test_run",
    "tests.sentry.issues.test_search_issues_dataset",
    "tests.sentry.issues.test_status_change",
    "tests.sentry.issues.test_status_change_consumer",
    "tests.sentry.issues.test_update_inbox",
    "tests.sentry.lang.dart.*",
    "tests.sentry.loader.*",
    "tests.sentry.mail.activity.*",
    "tests.sentry.manager.*",
    "tests.sentry.middleware.test_reporting_endpoint",
    "tests.sentry.models.releases.*",
    "tests.sentry.monitors.migrations.*",
    "tests.sentry.net.*",
    "tests.sentry.new_migrations.*",
    "tests.sentry.notifications.models.*",
    "tests.sentry.notifications.notification_action.metric_alert_registry.*",
    "tests.sentry.notifications.notifications.organization_request.*",
    "tests.sentry.notifications.platform.*",
    "tests.sentry.notifications.utils.*",
    "tests.sentry.objectstore.*",
    "tests.sentry.onboarding_tasks.*",
    "tests.sentry.organizations.*",
    "tests.sentry.partnerships.*",
    "tests.sentry.plugins.interfaces.*",
    "tests.sentry.plugins.sentry_useragents.*",
    "tests.sentry.plugins.sentry_webhooks.*",
    "tests.sentry.post_process_forwarder.*",
    "tests.sentry.processing.*",
    "tests.sentry.profiles.consumers.*",
    "tests.sentry.profiling.*",
    "tests.sentry.projects.*",
    "tests.sentry.ratelimits.test_leaky_bucket",
    "tests.sentry.receivers.outbox.*",
    "tests.sentry.relay.config.test_metric_extraction",
    "tests.sentry.release_health.*",
    "tests.sentry.relocation.api.*",
    "tests.sentry.replays.*",
    "tests.sentry.roles.*",
    "tests.sentry.rules.actions.base.*",
    "tests.sentry.rules.filters.*",
    "tests.sentry.rules.history.endpoints.*",
    "tests.sentry.runner.commands.presenters.*",
    "tests.sentry.runner.commands.test_cleanup",
    "tests.sentry.security.*",
    "tests.sentry.seer.anomaly_detection.*",
    "tests.sentry.seer.workflows.*",
    "tests.sentry.sentry_apps.api.*",
    "tests.sentry.sentry_apps.external_issues.*",
    "tests.sentry.sentry_apps.external_requests.*",
    "tests.sentry.sentry_apps.models.*",
    "tests.sentry.sentry_apps.services.*",
    "tests.sentry.sentry_apps.token_exchange.*",
    "tests.sentry.sentry_apps.utils.*",
    "tests.sentry.sentry_apps.web.*",
    "tests.sentry.sentry_metrics.limiters.*",
    "tests.sentry.services.eventstore.processing.*",
    "tests.sentry.services.eventstore.snuba.*",
    "tests.sentry.services.nodestore.*",
    "tests.sentry.similarity.backends.*",
    "tests.sentry.snuba.metrics.test_metrics_layer.*",
    "tests.sentry.snuba.metrics.test_metrics_query_layer.*",
    "tests.sentry.spans.grouping.*",
    "tests.sentry.tasks.integrations.*",
    "tests.sentry.tasks.test_code_owners",
    "tests.sentry.tasks.test_delete_seer_grouping_records",
    "tests.sentry.tasks.test_on_demand_metrics",
    "tests.sentry.tempest.endpoints.*",
    "tests.sentry.templatetags.*",
    "tests.sentry.testutils.*",
    "tests.sentry.types.*",
    "tests.sentry.uptime.autodetect.*",
    "tests.sentry.uptime.migrations.*",
    "tests.sentry.usage_accountant.*",
    "tests.sentry.users.api.bases.*",
    "tests.sentry.users.api.serializers.*",
    "tests.sentry.users.models.*",
    "tests.sentry.users.services.*",
    "tests.sentry.utils.email.*",
    "tests.sentry.utils.kvstore.test_bigtable",
    "tests.sentry.utils.mockdata.*",
    "tests.sentry.utils.security.*",
    "tests.sentry.web.forms.*",
    "tests.sentry.web.frontend.generic.*",
    "tests.sentry.web.frontend.test_cli",
    "tests.sentry.workflow_engine.detectors.*",
    "tests.sentry.workflow_engine.endpoints.*",
    "tests.sentry.workflow_engine.handlers.action.*",
    "tests.sentry.workflow_engine.models.*",
    "tests.sentry.workflow_engine.processors.contexts.*",
    "tests.sentry.workflow_engine.service.*",
    "tests.sentry.workflow_engine.utils.*",
    "tests.sentry_plugins.*",
    "tests.snuba.api.serializers.*",
    "tests.snuba.metrics.*",
    "tests.snuba.models.*",
    "tests.social_auth.*",
    "tools.*",
]
disallow_any_generics = true
disallow_untyped_defs = true
# end: stronger typing
